options showing, todo: fix div wrapping on key

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ html {
 }
 
 .key {
+  position: relative;
+
   width: 10rem;
   padding: 1rem .5rem;
   margin: 1rem;
@@ -29,6 +31,7 @@ html {
   background: rgba(125, 125, 125, 0.262);
   
   transition: all .08s ease;
+  z-index: 10;
 }
 
 .playing {
@@ -54,4 +57,14 @@ kbd {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.key-options {
+  position: absolute;
+  bottom: 60px;
+  left: 100px;
+  
+  width: 100px;
+  height: 100px;
+  background-color: white;
 }
